# 2D-RayTracing

./: Cargo.toml  README.md  build.rs
shaders/: chunk.slang  ray_tracing.slang
src/: lib.rs  shader.wgsl  state.rs  vector2.rs  vector3.rs
