[package]
name = "raytracing_2d"
version = "0.1.0"
edition = "2024"

[dependencies]
cgmath = "0.18.0"
encase = { version = "0.11.0", features = ["cgmath"] }
noise = "0.9.0"
pollster = "0.4.0"
rand = "0.9.1"
wgpu = { version = "25.0.0" }
winit = "0.30.10"

[lints.rust]
elided_lifetimes_in_paths = "deny"
